# patchwork

./: README.md  pyproject.toml
patchwork/: __init__.py  cli.py  review.py
tests/: test_cli.py
